# splats_surface_reconstruction

./: CMakeLists.txt  Dockerfile  Readme.md
cmake/modules/: FindARPACK.cmake  FindARPACKPP.cmake  FindLevmar.cmake
demo/: Readme.md  run_demo_sphere.sh
demo/data/: sphere.xyz
include/C2t3/: Complex_2_in_triangulation_3_post_processing.h  Complex_3_in_triangulation_3_file_writer.h
include/CGAL_overrides/Surface_mesher/: Surface_mesher.h
include/ClosestPoint/: closest_point_triangle_3.h
include/GeneralDistanceModels/: Euclidean_distance_segment_3_point.h
include/LocalSurfaceFit/: LBQModelEstimator.h  LocalBivariateQuadric.h  WLBQModelEstimator.h  WLBQSegmentModelEstimator.h
include/LocalSurfaceFit/Test/: CMakeLists.txt  CheckFittedSurface.m  CheckFittedSurfaceSimple.m  CreateCorruptedSamplePoints.m  CreateSamplePoints.m  DataPointsCorrupted.xyz  DrawCircularDiscretizedLBQ.m  EvalLBQ.m  TestLocalBivariateQuadric.cpp  TestLocalBivariateQuadricRANSAC.cpp  test.bat  testRansac.bat
include/Monge_via_jet_fitting_eval/: CMakeLists.txt  Monge_via_jet_fitting_eval.h
include/Octree/: CGAL_Octree.h  CMakeLists.txt  OctreeTestGetMean.cpp
include/PointSetReader/: PointSetReader.h
include/PointSetSurfaceMesher/: PointSetSurfaceMesherOracle.h  SegmentQueryIntersectionOracle.h
include/RANSAC/: ransac.h
include/RobustStatistics/: BiasedLeastKthSquares.cpp  BiasedLeastKthSquares.h  CMakeLists.txt  LeastKthSquares.cpp  LeastKthSquares.h  ModelEstimator.h  Ransac.cpp  Ransac.h  RansacFitLineTest.cpp  Readme.txt  ScaleEstimation.h
include/RobustStatistics/Models/FitCentroid/: CentroidModelEstimator.h
include/RobustStatistics/Models/FitLine2D/: LineModelEstimator.h
include/RobustStatistics/Models/FitLocalSmoothSurface/: LocalSmoothSurfaceModelEstimator.h
include/RobustStatistics/Models/FitPlane/: BiasedPlaneModelEstimator.h  PlaneModelEstimator.h  PlaneWithNormalModelEstimator.h  PlaneWithUnorientedNormalModelEstimator.h
include/RobustStatistics/Models/FitQuadric/: QuadricModelEstimator.h
include/Splat_3/: Splat_3.h  SplatsIO.h
include/Splat_3/AABBTree/: AABB_Splat_3_intersections.h  AABB_Splat_3_primitive.h  AABB_Splat_3_traits.h  nearest_point_Splat_3.h
include/Splat_3/intersection/: Splat_3_Line_3_do_intersect.h  Splat_3_Line_3_intersect.h  Splat_3_Ray_3_do_intersect.h  Splat_3_Ray_3_intersect.h  Splat_3_Segment_3_do_intersect.h  Splat_3_Segment_3_intersect.h  Splat_3_intersection.h
include/Splat_3_Mesher/: AABB_Tree_Splat_3_Mesher_Oracle.h  AABB_Tree_Splats_Mesher_Oracle_Construct_intersection.h
include/Splat_3_Surface_Mesher/: AABB_Tree_Splat_3_Surface_Mesher_Oracle.h
include/SplatsCreation/: SplatsCreator.h
include/SplatsCreation/KDTreeSearch/: Fuzzy_capsule_3.h  My_Search_traits_3.h
include/SplatsIsosurfaceMesher/: NCut.h  OrientedSplatsDistanceFunction.h  SplatsDistanceFunctionGCut.h  SplatsDistanceFunctionNCut.h  SplatsUnsignedDistanceFunction.h  Splats_distance_function_triangulation_3.h  marching_cubes.h
include/SquaredDistance/: squared_distance_segment_triangle_3.h  squared_distance_segment_triangle_vertices_3.h
include/UnsignedDistanceFunctionRefiner/: Unsigned_distance_in_band_mesh_cell_criteria_3.h  Unsigned_distance_mesh_cell_criteria_3.h  Unsigned_distance_refine_cells_3.h  Unsigned_distance_refine_triangulation.h
patches/: Readme.md
patches/CGAL-4.0.2/Installation/src/: CMakeLists.txt
src/: CMakeLists.txt
src/LocalSurfaceFit/: LBQModelEstimator.cpp  WLBQModelEstimator.cpp  WLBQSegmentModelEstimator.cpp
src/RobustStatistics/Models/FitCentroid/: CentroidModelEstimator.cpp
src/RobustStatistics/Models/FitLine2D/: LineModelEstimator.cpp
src/RobustStatistics/Models/FitLocalSmoothSurface/: LocalSmoothSurfaceModelEstimator.cpp
src/RobustStatistics/Models/FitPlane/: BiasedPlaneModelEstimator.cpp  PlaneModelEstimator.cpp  PlaneWithNormalModelEstimator.cpp  PlaneWithUnorientedNormalModelEstimator.cpp
src/RobustStatistics/Models/FitQuadric/: QuadricModelEstimator.cpp
src/exe/: CMakeLists.txt
src/exe/compute_splats/: CMakeLists.txt  ComputeSplats.cpp
src/exe/mesh_oriented_splats/: CMakeLists.txt  OrientedSplatsMesher.cpp
src/exe/mesh_point_set/: CMakeLists.txt  PointSetMesher.cpp
src/exe/mesh_splats/: CMakeLists.txt  mesh_splats.cpp
src/exe/mesh_splats_gcut/: CMakeLists.txt  SplatsDistanceGCut.cpp
src/exe/mesh_splats_ncut/: CMakeLists.txt  SplatsDistanceNCut.cpp
src/exe/orient_splats/: CMakeLists.txt  OrientSplats.cpp
src/tests/: CMakeLists.txt
src/tests/Fuzzy_capsule_3/: CMakeLists.txt  test_fuzzy_capsule_3_range_query.cpp  test_fuzzy_capsule_3_range_query_random_points.cpp
src/tests/Monge_via_jet_fitting_eval/: CMakeLists.txt  Monge_via_jet_fitting_eval.cpp  Monge_via_jet_fitting_intersection.cpp
src/tests/Monge_via_jet_fitting_eval/data/: CreateSamplePointset.m
src/tests/Squared_distances/: CMakeLists.txt  test_squared_distances.cpp
