add_executable( test_fuzzy_capsule_3_range_query test_fuzzy_capsule_3_range_query.cpp )
add_executable( test_fuzzy_capsule_3_range_query_random_points test_fuzzy_capsule_3_range_query_random_points.cpp )

target_link_libraries( test_fuzzy_capsule_3_range_query ${CGAL_LIBRARIES} ${CGAL_3RD_PARTY_LIBRARIES} )
target_link_libraries( test_fuzzy_capsule_3_range_query_random_points ${CGAL_LIBRARIES} ${CGAL_3RD_PARTY_LIBRARIES} )
